--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Honour</title>
 </head>
 <body>
     <!DOCTYPE html>
@@ -17,7 +17,7 @@
 </head>
 <body>
     <header>
-        <h1>Daraz</h1>
+        <h1>Honour Shoopify</h1>
     </header>
     <main>
         <div class="product">
